icono de linkedin

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 
         <link rel='stylesheet' href="css/styles.css">
+   
 
         <title>Elisabet Agulló | Portfolio </title>
     </head>
@@ -40,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Elisabet Agulló</span><br> Software Engineer</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <a href="elisabetaudiovisual@gmail.com" class="button">Contact</a>
                 </div>
 
                 <div class="home__social">
@@ -223,13 +224,16 @@
 
                 <div class="contact__container bd-grid">
                    <p> Email ->  <b> elisabetaudiovisual@gmail.com</b></p>
+                   <br>
+                   <p>  <a href="https://www.linkedin.com/in/elisabet-agull%C3%B3-b9397314a"><img src="img/icons8-linkedin.svg" alt="Linkedin enlace"></a></p>
                 </div>
             </section>
         </main>
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Elisabet Agulló</p>
+            <p class="footer__title">Junior Software Engineer</p>
+            
             <div class="footer__social">
                 <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
@@ -243,6 +247,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
